syntax = "proto3";

package userapi.v1;

import "userapi/v1/user.proto";

option go_package = "github.com/nsaltun/protos/userapi/v1;userapi";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  userapi.v1.User user = 1;
}

message CreateUserResponse {
  userapi.v1.User user=1;
}
